syntax = "proto3";
package EventStore;

option csharp_namespace = "OrderManagement.EventStore.Messages";

message StockMessage {
	string Id = 1;
	string Symbol = 2;
	StockChange Change = 3;
	Market Market = 4;
	repeated Comment Comments = 5;
}

message StockChange {
	double Price = 1;
	double PriceChange = 2;
	double PercentageChange = 3;
	string DateTime = 4;
}

message Market {
	string Symbol = 1;
	string City = 2;
	MarketStatus Status = 3;
}

enum MarketStatus {
	Open = 0;
	Closed = 1;
}

message Comment {
	int32 Id = 1;
	string Title = 2;
	string Content = 3;
	string DateTime = 4;
}